--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.0",
